fix: 1. change the size of the tag 2. change the display into flex wrap

--- a/frontend/src/components/card/careers/careerCard.css
+++ b/frontend/src/components/card/careers/careerCard.css
@@ -47,6 +47,8 @@
 }
 
 .oct-card-career .taglist {
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 10px;
 }
 
