--- a/frontend/src/components/tag/tag.css
+++ b/frontend/src/components/tag/tag.css
@@ -1,10 +1,13 @@
 .oct-tag {
+    width: fit-content;
+    
     font-size:0.75em;
     display: inline-block;
     margin: 10px;
     padding: 10px 20px;
     align-items: center;
     border-radius: 10px;
+    flex: 0 0 auto;
 
     color: #0DF6E3;
     background-color: #0D4A56;
